--- a/index.html
+++ b/index.html
@@ -12,14 +12,16 @@
 
 <body>
     <main>
-
+        
         <div class="area-inimigo">
             <h4>INIMIGO</h4>
             <button onClick="atacarHeroi()">ATACAR O HERÓI</button>
+            <div id="energiaH"></div>
         </div>
         <div class="area-heroi">
             <h4>HERÓI</h4>
             <button onClick="atacarInimigo()">ATACAR O INIMIGO</button>
+            <div id="energiaI"></div>
         </div>
 
     </main>
