--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
         
         <div class="area-inimigo">
             <h4>INIMIGO</h4>
-            <button onClick="atacarHeroi()">ATACAR O HERÓI</button>
+            <button onClick="atacarHeroi()" id="bH">ATACAR O HERÓI</button>
             <div id="energiaH">100</div>
         </div>
         <div class="area-heroi">
             <h4>HERÓI</h4>
-            <button onClick="atacarInimigo()">ATACAR O INIMIGO</button>
+            <button onClick="atacarInimigo()" id="bI">ATACAR O INIMIGO</button>
             <div id="energiaI">100</div>
         </div>
 
