--- a/index.html
+++ b/index.html
@@ -15,16 +15,22 @@
 
         <div class="area-inimigo">
             <h4> INIMIGO </h4>
+            <!-- <div id="smilleIn"> :-) </div> -->
             <button onClick="atacarHeroi()" id="bH"> ATACAR O HERÓI </button>
             <div id="energiaH"> 100 </div>
         </div>
         <div class="area-heroi">
             <h4> HERÓI </h4>
+            <!-- <div id="smilleHe"> :-) </div> -->
             <button onClick="atacarInimigo()" id="bI"> ATACAR O INIMIGO </button>
             <div id="energiaI"> 100 </div>
         </div>
 
     </main>
+    <div>
+        <button onClick="reiniciar()">reload</button>
+    </div>
+
 </body>
 
 </html>
