--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
         <div class="area-inimigo">
             <h4> INIMIGO </h4>
-            <div id="smilleIn"> :-) </div> 
+            <div id="smilleIn"> :-) </div>
             <button onClick="atacarHeroi()" id="bH"> ATACAR O HERÓI </button>
             <div id="energiaH"> 100 </div>
         </div>
@@ -25,10 +25,13 @@
             <button onClick="atacarInimigo()" id="bI"> ATACAR O INIMIGO </button>
             <div id="energiaI"> 100 </div>
         </div>
+        <div class="lista">
+            <h4>PLACAR</h4>
+        </div>
 
     </main>
     <div>
-        <button onClick="reiniciar()">reload</button>
+        <button onClick="reiniciar()" id="reload">reload</button>
     </div>
 
 </body>
