--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <button onClick="atacarInimigo()" id="bI"> ATACAR O INIMIGO </button>
             <div id="energiaI"> 100 </div>
         </div>
-        <div class="lista">
+        <div id="lista">
             <h4>PLACAR</h4>
         </div>
 
