--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
             <button onClick="atacarInimigo()" id="bI"> ATACAR O INIMIGO </button>
             <div id="energiaI"> 100 </div>
         </div>
-        <div id="lista">
+        <div>
             <h4>PLACAR</h4>
+            <ul id="lista"></ul>
         </div>
-
     </main>
     <div>
         <button onClick="reiniciar()" id="reload">reload</button>
